exports[`(.not).toHaveUnavailableForLegalReasonsStatus > using axios > .not.toHaveUnavailableForLegalReasonsStatus > fails when response have status code 451 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveUnavailableForLegalReasonsStatus()</intensity>

Expected status code to not be 451 received:
  <red>451</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 451,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveUnavailableForLegalReasonsStatus > using axios > .toHaveUnavailableForLegalReasonsStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveUnavailableForLegalReasonsStatus()</intensity>

Expected status code to be 451 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveUnavailableForLegalReasonsStatus > using got > .not.toHaveUnavailableForLegalReasonsStatus > fails when response have status code 451 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveUnavailableForLegalReasonsStatus()</intensity>

Expected status code to not be 451 received:
  <red>451</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 451,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveUnavailableForLegalReasonsStatus > using got > .toHaveUnavailableForLegalReasonsStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveUnavailableForLegalReasonsStatus()</intensity>

Expected status code to be 451 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
